# youtube-text-search

./: .env.example  .gitignore  Makefile  README.md  RESPONSE.md  docker-compose.yml  extract_transcript.py  pyproject.toml  requirements-extractor.txt  urls.example.txt
app/: __init__.py  cache.py  chunking.py  cli.py  config.py  ingest.py  llm.py  models.py  url_inputs.py
app/extractors/: __init__.py  base.py  playwright_extractor.py
app/indexing/: __init__.py  embeddings.py  keyword.py
app/search/: __init__.py  hybrid.py
tests/: test_cache.py  test_chunking.py  test_extractor.py  test_ingest.py  test_search.py  test_url_inputs.py
